Add slide decks using reveal.js

--- a/site/content/slidedeck/2022/slides-1/index.mdx
+++ b/site/content/slidedeck/2022/slides-1/index.mdx
@@ -2,20 +2,10 @@
 title: Slides 1
 date: "2015-05-01T22:12:03.284Z"
 description: "Slides 1 description"
-tags: ["slide-deck", "test"]
+tags: ["slide-deck", "Test"]
+slide_url: "https://paulomenin.github.io/go-presentation/"
 ---
 
-# Test embedded reveal js
+# Test external reveal js
 
 <RevealJsSlides src="https://paulomenin.github.io/go-presentation/" />
-
-# internal content
-
-<RevealJsSlides>
-  <div class="reveal">
-    <div class="slides">
-      <section>Slide 1</section>
-      <section>Slide 2</section>
-    </div>
-  </div>
-</RevealJsSlides>
