Redesign landing page

--- a/site/content/slidedeck/2022/slides-1/index.mdx
+++ b/site/content/slidedeck/2022/slides-1/index.mdx
@@ -6,6 +6,8 @@ tags: ["slide-deck", "Test"]
 slide_url: "https://paulomenin.github.io/go-presentation/"
 ---
 
-# Test external reveal js
+Test external reveal js
 
 <RevealJsSlides src="https://paulomenin.github.io/go-presentation/" />
+
+Test external reveal js
