Add slides template, and refactor content folder

--- a/site/content/posts/blog/2022/why-i-started-blogging.mdx
+++ b/site/content/posts/blog/2022/why-i-started-blogging.mdx
@@ -1,6 +1,6 @@
 ---
 title: Why I started blogging in 2022
-description: In this post I write about some reasons to start writing.
+description: In this post, I write about some reasons to start writing.
 date: "2022-06-06T22:10:00.000Z"
 tags: ["blog"]
 ---
