Add kroki integration

--- a/site/content/templates/post-template.mdx
+++ b/site/content/templates/post-template.mdx
@@ -9,7 +9,7 @@ draft: true
 slide_url: "url to revealjs slide deck"
 ---
 
-This template have all frontmatter fields to use as example to create new posts.
+This template has all frontmatter fields to use as an example to create new posts.
 
 Frontmatter fields:
 
@@ -20,6 +20,8 @@ Frontmatter fields:
 - updated: last updated timestamp
 - tags: list of tags
 - draft: flag to not publish the post
-- slide_url: only useful for slide-deck posts
+- slide_url: only useful for slide-deck post
 
-[paulomenin.dev](https://paulomenin.dev)
+Add Kroki diagrams:
+
+<Kroki files={props.krokiFiles} src="file.kroki" />
