--- a/site/content/posts/slidedeck/2022/go-board-game-presentation.mdx
+++ b/site/content/posts/slidedeck/2022/go-board-game-presentation.mdx
@@ -1,6 +1,6 @@
 ---
 title: Go - Board Game
-description: "Introduction to game of Go"
+description: "Introduction to the game of Go"
 date: "2022-05-30T19:12:03.284Z"
 tags: ["slide-deck", "board-games", "go-game"]
 slide_url: "https://paulomenin.github.io/go-presentation/"
